--- a/public/assets/css/my-css.css
+++ b/public/assets/css/my-css.css
@@ -1,5 +1,25 @@
+/**
+* Por favor mantenha o css limpo, siga o mesmo estilo
+* --> Comentário -> depois bloco de código
+* by: siene k. kelyson
+**/
+
 @import url('general-sans.css');
 @import url('all-fonts.css');
+@import url('osans/style.css');
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #eee;
+  border-radius: 2px;
+}
 
 * {
   margin: 0;
@@ -7,21 +27,19 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: 'GeneralSans-Regular';
+html,
+body {
+  /*font-family: 'GeneralSans-Regular';*/
+  font-family: 'Open Sans Regular';
+  text-size-adjust: 100%;
 }
 
 body {
-  width: 100%;
-  min-height: 100vh;
-  position: relative;
-  font-family: 'Roboto-Light';
-  background-color: #F4F4F4;
-  overflow-x: hidden;
+  background-color: #f6f6f6;
+
 }
 
 a {
-  color: #333;
   text-decoration: none;
 }
 
@@ -29,106 +47,744 @@ img {
   max-width: 100%;
 }
 
-.container {
-  width: 80%;
+/*
+|---------------------------------------------------
+| Predefinitions
+|---------------------------------------------------
+*/
+
+.sx {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
   position: relative;
+}
+
+.sx .footer,
+.sx footer {
+  margin-top: auto;
+}
+
+.no-padding {
+  padding: 0 !important;
+}
+
+.back-to-top {
+  right: 2rem;
+  bottom: 0;
+  position: fixed;
+  width: 6vw;
+  height: 3.5vw;
+  text-align: center;
+  cursor: pointer;
+  line-height: 45px;
+  color: #fff;
+  background-color: #cc0000;
+  border-radius: 4px 4px 0 0;
+}
+
+.sx-container {
+  width: 80%;
   margin: 0 auto;
 }
 
-/*
-credentials
-*/
-
-.credentials {
-  width: 100%;
-  height: 100vh;
+.sx-container.tiny {
+  width: 75%;
 }
 
-.credentials .container {
+.sx-container.enlarge {
+  width: 90%;
+}
+
+.sx-container.full-width {
+  width: 100%;
+}
+
+.sx-col {
+  width: 50%;
+}
+
+.sx-col.full-width {
+  width: 100%;
+}
+
+.tw-muted,
+.td-muted {
+  display: block;
+}
+
+.tw-muted {
+  color: #8a8a8a;
+}
+
+.td-muted {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.d-flex {
+  display: flex;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.bold,
+.tiny-bold {
+  display: block;
+  font-family: 'Open Sans Bold';
+}
+
+.bold {
+  font-size: 2.5vw;
+  line-height: 2.5vw;
+}
+
+.tiny-bold {
+  font-size: 1.5vw;
+  line-height: 1.5vw;
+}
+
+.box {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.mt-0 {
+  margin-top: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 1.5rem;
+}
+
+.mb-0 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 1.5rem;
+}
+
+
+.title-as-horizontal-qr .mt-0,
+.title-as-horizontal-qr .mt-2,
+.title-as-horizontal-qr .mb-2,
+.title-as-horizontal-qr .mb-0 {
+  display: block;
+  font-size: 1.1vw;
+}
+
+
+.line-divider-horizontal {
+  width: 100%;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+.line-through {
+  text-decoration: line-through;
+}
+
+/*
+|---------------------------------------------------
+| Navigation
+|---------------------------------------------------
+*/
+
+.__nav {
+  width: 100%;
+  height: 80px;
+  position: relative;
+  background-color: #fff;
+  z-index: 111111111111;
+}
+
+.__nav-appname .bi {
+  align-items: center;
+  font-size: 18px;
+}
+
+.__nav .__nav-items,
+.__nav .sx-container {
+  height: 100%;
+  align-items: center;
+}
+
+.__nav-items {
+  flex: 1;
+  gap: 1.5rem;
+  margin-left: 3rem;
+}
+
+.__nav-items a {
+  color: #000;
+  font-size: 1.1vw;
+}
+
+/*
+|---------------------------------------------------
+| Wallpaper
+|---------------------------------------------------
+*/
+.wallpaper {
+  top: -70px;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: url('../img/studio-bg.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
+  transform: rotateX(360deg);
+}
+
+.wallpaper::after {
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.9;
+  background: linear-gradient(to left, #000, rgba(0, 0, 0, 0.6));
+}
+
+.wallpaper .sx-container {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-
-.cred-img {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.cred-img img {
-  width: 20%;
-}
-.credentials-data {
-  min-width: 27vw;
+  z-index: 111;
   position: relative;
 }
 
-.credential-item {
+.wallpaper .sx-col {
+  width: 50%;
+  position: relative;
+}
+
+.wallpaper .title {
+  color: #fff;
+}
+
+.wallpaper .tw-muted,
+.wallpaper .td-muted {
+  display: block;
+  margin: 1.5rem 0 3rem;
+  font-size: 1.2vw;
+}
+
+.wallpaper .actions a+a {
+  margin-left: 1rem;
+}
+
+.wallpaper .actions a {
+  height: 45px;
+  padding: 0 1rem;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.2s ease;
+}
+
+.wallpaper .actions a:first-of-type {
+  color: #fff;
+  background-color: transparent;
+  border-color: #fff;
+}
+
+.wallpaper .actions a:hover {
+  color: #000;
+  background-color: #fff;
+  opacity: 0.7;
+  transform: translateY(1px);
+}
+
+/*
+|---------------------------------------------------
+| Card sections
+|---------------------------------------------------
+*/
+
+.sx-card-section {
+  padding: 0 0 2rem;
+}
+
+.sx-card-section-header,
+.sx-card-section-contain {
+  padding: 1rem 0;
+}
+
+.sx-card-section-header+.sx-card-section-contain {
+  margin-top: 1rem;
+}
+
+/*
+|---------------------------------------------------
+| box
+|---------------------------------------------------
+*/
+
+.sx .box {
+  justify-content: space-between;
+}
+
+.sx .box a {
+  color: #000;
+}
+
+.sx .box .box-item {
+  width: 200px;
+  height: 100px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #fff;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+}
+
+.sx .box .box-item .name {
+  font-size: 1vw;
+  display: block;
+  margin-bottom: 5px;
+  font-family: 'Open Sans Bold';
+}
+
+.sx a.box-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*box-shadow: none !important;*/
+}
+
+/*
+|---------------------------------------------------
+| records
+|---------------------------------------------------
+*/
+
+.sx .records {
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+}
+
+.sx .record-item {
+  text-align: center;
+}
+
+.sx .record-item+span {
+  display: block;
+  width: 1px;
+  height: 60px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+/*
+|---------------------------------------------------
+| asked frequently
+|---------------------------------------------------
+*/
+
+.asked-frequently {
+  justify-content: space-between;
+}
+
+.asked-frequently .sx-col {
+  width: 45%;
+}
+
+.asked-item {
+  margin-top: 1rem;
+}
+
+.asked-top {
   width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  cursor: pointer;
+  background-color: #fff;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  /*border-radius: 4px;*/
+  font-size: 1.1vw;
+  gap: 10px;
+  border-left: 3px solid #000;
+}
+
+.asked-body {
+  width: 100%;
+  height: 0px;
+  overflow: hidden;
+  background-color: #fff;
+  padding: 0;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  font-size: 1.05vw;
+  border-left: 3px solid #000;
+}
+
+.asked-item.active {
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  border-left: 3px solid #000;
+}
+
+.asked-item.active .asked-body {
+  height: 100px;
+  padding: 0.5rem 1rem;
+}
+
+.asked-item.active .asked-top {
+  font-family: 'Open Sans Bold';
+}
+
+.asked-item.active .asked-body,
+.asked-item.active .asked-top {
+  border: none;
+  box-shadow: none;
+}
+
+/*
+|---------------------------------------------------
+| encomend
+|---------------------------------------------------
+*/
+.sx-fm-encomend {
+  width: 80%;
+  height: 60px;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.sx-fm-encomend input {
+  width: 80%;
+}
+
+.sx-fm-encomend button {
+  width: 20%;
+}
+
+.sx-fm-encomend input,
+.sx-fm-encomend button {
+  height: 100%;
+  outline: none;
+  font-family: 'Open Sans Regular';
+  font-size: 16px;
+  transition: 0.15s ease;
+}
+
+.sx-fm-encomend input {
+  border: solid 1px rgba(0, 0, 0, 0.15);
+  padding-left: 1rem;
+  border-radius: 4px 0 0 4px;
+}
+
+.sx-fm-encomend input:focus {
+  /*border-color: rgba(0, 0, 0, 0.5);*/
+  border-color: #c00;
+}
+
+.sx-fm-encomend button {
+  border: none;
+  color: #fff;
+  /*background-color: #000;*/
+  background-color: #cc0000;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+}
+
+.sx-fm-encomend button:hover {
+  opacity: 0.8;
+}
+
+/*
+|---------------------------------------------------
+| footer
+|---------------------------------------------------
+*/
+footer {
+  min-height: 40vh;
+  background-color: #E8EBEE;
+}
+
+footer .sx-container {
+  display: flex;
+  align-items: start;
+}
+
+footer .categorias span,
+footer .categorias small {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 0.5rem;
+}
+
+footer .sx-container+.sx-container {
+  margin-top: 2rem;
+}
+
+.external-links {
+  gap: 10px;
+  margin-top: 2rem;
+}
+
+.external-links a {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #000;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+.external-links a:hover {
+  background-color: transparent;
+}
+
+footer .by {
+  gap: 5px;
+  align-items: center;
+  font-size: 18px !important;
+}
+
+footer .by a {
+  color: #000;
+}
+
+/*
+|---------------------------------------------------
+| packges
+|---------------------------------------------------
+*/
+.packages {
+  display: flex;
+  align-items: start;
+  position: relative;
+}
+
+.package-item {
+  width: 25%;
+  min-width: 25%;
+  border-radius: 4px;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  background-color: #fff;
+  padding: 1rem;
+}
+
+.package-top .title {
+  font-family: 'Roboto-Bold';
+}
+
+.package-top .title+small {
+  font-size: 16px;
+}
+
+.package-item .bold {
+  display: flex;
+  align-items: baseline;
+  font-size: 20px;
+  margin: 1rem 0;
+  gap: 10px;
+}
+
+.package-includes .bi {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 0.5rem 0;
+}
+
+.package-item a {
+  display: flex;
+  color: #000;
+  height: 45px;
+  padding: 0 1rem;
+  align-items: center;
+  margin-top: 1rem;
+  border-radius: 4px;
+  font-family: 'Roboto-Regular';
+  border: solid 1px #000;
+  transition: 0.2s ease;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.package-item a .bi {
+  margin-right: -100px;
+  display: block;
+  transition: 0.2s ease;
+}
+
+.package-item:last-of-type a {
+  background-color: #000;
+  color: #fff;
+}
+
+.package-item a:hover {
+  color: #fff;
+  opacity: 0.9;
+  border-color: #222;
+  background-color: #222;
+  transform: translateY(2px);
+}
+
+.package-item a:hover .bi {
+  margin: 0;
+}
+
+/*
+|---------------------------------------------------
+| chooser
+|---------------------------------------------------
+*/
+.box-chooser {
+  width: 100%;
+  height: 30px;
+  align-items: center;
+  justify-content: center;
+  background-color: #E8EBEE;
+}
+
+.chooser-item {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: #000;
+  padding: 0 0.5rem;
+  font-size: 14px;
+  transition: 0.2s ease;
+}
+
+.chooser-item.active,
+.chooser-item:hover {
+  color: #fff;
+  background-color: #cc0000;
+}
+
+.chooser-item+.chooser-item {
+  margin-left: 1rem;
+}
+
+
+.sx-container.d-flex {
+  justify-content: space-between;
+}
+
+.sx-container.d-flex button,
+.sx-container.d-flex input {
+  outline: none;
+  font-family: 'Open Sans Regular';
+  transition: 0.2s ease;
+  font-size: 16px;
+}
+
+.sx-container.d-flex button {
+  width: 12%;
+  height: 55px;
+  padding: 0 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+.sx-container.d-flex button:hover {
+  opacity: 0.8;
+  transform: translateY(0px);
+}
+
+.sx-container.d-flex .input {
+  width: 82%;
   height: 55px;
   position: relative;
 }
 
-.credential-item + .credential-item {
-  margin-top: 1rem;
-}
-
-.credi-input {
-  outline: none;
+.sx-container.d-flex input {
   width: 100%;
   height: 100%;
-  font-family: 'Roboto-Regular';
-  border-radius: 8px;
-  background-color: #fdfdfd;
-  padding: 1rem 1rem 0;
-  font-size: 16px;
-  transition: 0.2s ease;
-  border: solid 1px rgba(0, 0, 0, 0.2);
+  padding: 0 1rem;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
 }
 
-.credential-item button {
-  outline: none;
-  width: 100%;
-  height: 100%;
-  border: none;
-  font-size: 16px;
-  border-radius: 10px;
-  background-color: #cc0000;
-  color: rgba(255, 255, 255, 0.8);
-  cursor: pointer;
-  font-family: 'Roboto-Light';
+.sx-container.d-flex input:focus {
+  border-color: rgba(0, 0, 0, 0.2);
 }
 
-.credential-item button:hover {
-  opacity: 0.9;
-}
-
-.pholder {
+.sx-container.d-flex [class$="-search"] {
   top: 50%;
-  left: 1rem;
+  right: 1rem;
   position: absolute;
+  color: rgba(0, 0, 0, 0.3);
   transform: translateY(-50%);
-  transition: 0.2s ease;
-  pointer-events: none;
 }
 
-.credi-input:valid + .pholder,
-.credi-input:focus + .pholder {
-  top: 20%;
-  font-size: 13px;
+
+
+/*
+|---------------------------------------------------
+| browse
+|---------------------------------------------------
+*/
+.browse-row {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
 }
 
-.credi-input:focus {
-  border-color: rgba(0, 0, 0, 0.4);
+.browse-row + .browse-row {
+  margin-top: 2rem;
 }
 
-.tw-muted {
-  display: block;
+.browse-item {
+  width: 30%; 
+  height: 320px;
+  border-radius: 4px;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
-.forgot {
-  font-size: 14px;
+.browse-item .cover {
+  height: 80%;
+  position: relative;
+  border-radius: 4px;
+}
+
+.browse-item .cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 4px;
 }
