--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -47,7 +47,7 @@ navbar
 .navbar a.__nav-link {
     color: #000;
     font-size: 15px;
-    font-family: 'Roboto-Medium';
+    font-family: 'Roboto-Light';
     position: relative;
 }
 
@@ -79,4 +79,52 @@ navbar
 .navbar .__nav-item.active a.__nav-link,
 .navbar a.__nav-link:hover {
     color: #f71;
+}
+
+
+/*
+card-plan
+*/
+.card-plan {
+    background-color: #fff;
+    padding: 1rem 1.5rem;
+    border: 1px solid rgba(0, 0, 0, 0.07);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+}
+
+.card-plan-top>.title {
+    font-family: 'Roboto-Bold';
+}
+
+.card-plan-top>.title+div {
+    margin-top: -5px;
+    margin-bottom: 1rem;
+    gap: 1rem;
+}
+
+.card-plan-item {
+    gap: 0.5rem;
+}
+
+.card-plan-item+.card-plan-item {
+    margin-top: 0.5rem;
+}
+
+.card-plan-item .bi {
+    width: 15px;
+    height: 15px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #f71;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.card-plan-item:last-of-type {
+    margin-bottom: 0.5rem;
 }
