--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -128,3 +128,71 @@ card-plan
 .card-plan-item:last-of-type {
     margin-bottom: 0.5rem;
 }
+
+
+/*
+mobileMenu
+*/
+
+.mobileMenu {
+    position: relative;
+}
+
+.mobileMenu-top {
+    position: relative;
+    height: 60px;
+    background-color: #fff;
+    box-shadow: none;
+    border: solid 1px rgba(0, 0, 0, 0.03);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 11111;
+}
+
+.mobileMenu-top [class*="container"] {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.mobileMenu-top .nav-app {
+    gap: 5px;
+    color: #f71;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    font-family: 'Roboto-Bold';
+}
+
+.openMenu {
+    width: 35px;
+    height: 28px;
+    border: solid 1px #f71;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+}
+
+.openMenu .lineMenu {
+    width: 80%;
+    height: 2px;
+    display: block;
+    background-color: #f71;
+}
+
+.mobileMenu-contain {
+    top: 0;
+    right: 0;
+    width: 280px;
+    height: 100%;
+    position: fixed;
+    background-color: #fff;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
+    border: solid 1px rgba(0, 0, 0, 0.03);
+    z-index: 111111;
+}
