--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -188,11 +188,77 @@ mobileMenu
 .mobileMenu-contain {
     top: 0;
     right: 0;
-    width: 280px;
+    width: 285px;
     height: 100%;
     position: fixed;
     background-color: #fff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
     border: solid 1px rgba(0, 0, 0, 0.03);
     z-index: 111111;
+    display: flex;
+    flex-direction: column;
+}
+
+.mmItem {
+    display: block;
+}
+
+.mmItem a {
+    color: #000;
+}
+
+.mmItem a,
+.mmItem span:not(.bi-cart) {
+    display: flex;
+    align-items: center;
+    height: 45px;
+    width: 100%;
+    padding: 0 2rem;
+}
+
+.mmItem span:not(.bi-cart) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.mmItem:last-of-type {
+    margin-top: auto !important;
+    background-color: #f9f9f9;
+}
+
+
+.mmItem.active a {
+    background-color: #f71;
+    color: #fff;
+}
+
+.mmItem a:has(.count) {
+    justify-content: space-between;
+}
+
+.mmItem a:has(.count) .count {
+    width: 20px;
+    height: 20px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    background-color: rgba(255, 120, 17, 0.788);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+
+.mmItem a:has(.bi-cart) span {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.mmItem+.mmItem {
+    margin-top: 0.3rem;
 }
