--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -11,6 +11,7 @@
 @import "grid.css?v=1";
 @import "navbar.css";
 @import "table.css";
+@import "form.css";
 @import "wrapper.css";
 @import "media.css";
 
@@ -317,7 +318,7 @@ faqs
 }
 
 .faqItem-top.active + .faqItem-body {
-    height: 70px;
+    height: 90px;
     border: solid 1px rgba(0, 0, 0, 0.1);
     border-left: 4px solid #f71;
     padding: 0.5rem 1rem;
