--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -338,3 +338,33 @@ faqs
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
 }
+
+/*
+footer*/
+
+.footer .container-sm {
+    border-top: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.footer a {
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.footer .logo {
+    color: #f71;
+    font-family: 'Roboto-Bold';
+    font-size: 18px;
+}
+
+.footer .por {
+    text-decoration: underline;
+}
+
+.footer .por:hover {
+    opacity: 0.7;
+}
+
+.footer .heading {
+    font-family: 'Roboto-Bold';
+    font-size: 20px;
+}
