--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -322,6 +322,7 @@ faqs
     border: solid 1px rgba(0, 0, 0, 0.1);
     border-left: 4px solid #f71;
     padding: 0.5rem 1rem;
+    overflow-y: auto;
 }
 
 .pesquise_ {
