--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -369,3 +369,71 @@ footer*/
     font-family: 'Roboto-Bold';
     font-size: 20px;
 }
+
+
+/*
+|---------------------------------------------------
+| Wallpaper
+|---------------------------------------------------
+*/
+.wallpaper {
+    top: 0px;
+    left: 0;
+    width: 100%;
+    /*height: 76vh;
+    */height: 100vh;
+    display: flex;
+    position: relative;
+    background: url('../../img/studio-bg.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    transform: rotateX(360deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wallpaper > * {
+    z-index: 11111;
+}
+
+.wall-data {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.wall-data .td-muted {
+    width: 80%;
+    margin: 1.5rem auto 3rem !important;
+}
+
+.wall-data .actions {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.no-top {
+    top: 0 !important;
+    overflow: hidden;
+}
+
+.wallpaper::after {
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0.9;
+    background: linear-gradient(to left, #000, rgba(0, 0, 0, 0.6));
+}
+
+.wallpaper .sx-container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    z-index: 111;
+    position: relative;
+}
