--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -382,7 +382,8 @@ footer*/
     left: 0;
     width: 100%;
     /*height: 76vh;
-    */height: 100vh;
+    */
+    height: 100vh;
     display: flex;
     position: relative;
     background: url('../../img/studio-bg.jpg') no-repeat;
@@ -394,7 +395,7 @@ footer*/
     justify-content: center;
 }
 
-.wallpaper > * {
+.wallpaper>* {
     z-index: 11111;
 }
 
@@ -494,4 +495,23 @@ footer*/
 .title.text-bold {
     font-size: 22px;
     margin-top: -5px;
+}
+
+.card-plan-body img {
+    width: 100%;
+    max-width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 0px) {
+    .text-orange.text-bold.d-block.mt-3 {
+        font-size: 15px !important;
+    }
 }
