--- a/public/assets/css/uboard.css
+++ b/public/assets/css/uboard.css
@@ -182,7 +182,7 @@ ominioa
  */
 
 .has-dt-item {
-	height: 80px;
+	min-height: 80px;
 	display: flex;
 	flex-direction: column;
 	background-color: #fdfdfd;
@@ -214,12 +214,13 @@ ominioa
 }
 
 .has-dt-item.active {
-	height: 140px;
+	min-height: 140px;
 	border-left-color: #6F42C1;
 }
 
 .has-dt-item.active .dt-item-actions {
 	height: 40%;
+	padding-bottom: 2rem;
 }
 
 .has-dt-item.active .dt-item {
@@ -262,4 +263,45 @@ ominioa
 	height: 100%;
 	padding: 0 0.5rem;
 	font-size: 15px;
+}
+
+
+.sem-interacao {
+	border: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.ld-item {
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: #fdfdfd;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+	border-left: solid 5px #aaa;
+}
+
+.ld-item .letter {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #343A40;
+	color: #fff;
+	aspect-ratio: 1/1;
+	width: 28px;
+	height: 28px;
+	border-radius: 50%;
+}
+
+.ld-item .username span {
+	display: block;
+	margin-bottom: -5px;
+}
+
+.ld-item + .ld-item,
+.data-campanhas + .data-campanhas {
+	margin-top: 1rem;
+}
+
+.data-campanhas .col-md-6 {
+	width: 48% !important;
 }
